Particle Hair cannot be selected anymore #75556

Closed
opened 2020-04-09 16:04:04 +02:00 by Philipp Oeser · 9 comments
Member

System Information
Operating system: Linux-5.5.13-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-09 10:35, hash: a6d8f6c0f3
Worked: 3685347b41^

Short description of error
Particle Hair cannot be selected anymore

Exact steps for others to reproduce the error
particle_hair_select.blend

  • open blend file (or just create a hair particle system on the default cube)
  • try to select the emitter object by clicking on the hair (or using any other selection tools e.g. Box)

Apparently caused by 3685347b41
Displaying hair as thick strips doesnt seem to help here
particle_hair_select_thick_strips.blend

(noticed this while looking into new Hair object selection - a pending TODO in #68981 (New curves object type))

**System Information** Operating system: Linux-5.5.13-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-09 10:35, hash: a6d8f6c0f3 Worked: 3685347b41^ **Short description of error** Particle Hair cannot be selected anymore **Exact steps for others to reproduce the error** [particle_hair_select.blend](https://archive.blender.org/developer/F8459766/particle_hair_select.blend) - open blend file (or just create a hair particle system on the default cube) - try to select the emitter object by clicking on the hair (or using any other selection tools e.g. Box) Apparently caused by 3685347b41 Displaying hair as thick strips doesnt seem to help here [particle_hair_select_thick_strips.blend](https://archive.blender.org/developer/F8459864/particle_hair_select_thick_strips.blend) (noticed this while looking into new Hair object selection - a pending TODO in #68981 (New curves object type))
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

@fclem: I tried this with the hair-non-transform-feedback workaround, but that also fails, got an idea?

@fclem: I tried this with the hair-non-transform-feedback workaround, but that also fails, got an idea?

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

It looks like a regression, so I'll mark it as a high priority

It looks like a regression, so I'll mark it as a high priority
Jeroen Bakker was assigned by Dalai Felinto 2020-05-11 14:32:18 +02:00

This issue was referenced by 24140444f2

This issue was referenced by 24140444f2fb92292f93abbb472613d6cf7700a9

This issue was referenced by 849672a991

This issue was referenced by 849672a9912c9c09989cb8369d676ee89b541388
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75556
No description provided.